[package]
name = "tplink-connect"
version = "0.1.0"
edition = "2018"
authors = ["Unoqwy <julien.qwy@gmail.com>"]

license = "MIT"
description = "Communicate with a TP-Link router over an encrypted connection"

[dependencies]
reqwest = { version = "0.10.9", features = ["blocking", "cookies"] }
form_urlencoded = "1.0.0"
regex = "1.4.2"

rand = "0.7.3"
hex = "0.4.2"
md5 = "0.7.0"
aes = "0.6.0"
block-modes = "0.7.0"
base64 = "0.13.0"
openssl = "0.10.31"

